# 250726-uv-study-pkg20

./: .gitignore  README.md  pyproject.toml
.taskfile/: .env.template  git.yml
docs/: package_info_guide.md  package_info_solutions.md
examples/: basic_usage.py  package_info_demo.py  package_solutions_demo.py  portability_test.py  simple_usage.py  version_demo.py
src/250726_uv_study_pkg20/: __init__.py
src/pkg20/: __init__.py  __main__.py  package_info.py
src/pkg20/utils/: __init__.py  package_info.py
src/pkgs/: __init__.py  __main__.py  processor.py
src/py_uv_study_pkg20_250726/: __init__.py  __main__.py  processor.py
templates/: __init__.py.template  universal_init_template.py
tests/: test_processor.py
