[project]
name = "pkgs"
version = "0.0.13"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "lwmacct", email = "lwmacct@icloud.com" }]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
pkgs = "pkgs:main"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"
